perfectscrollbar fix back to perfectscrollbar

--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -7,9 +7,6 @@ body{
   font-weight: 400;
   font-feature-settings: 'pnum' on, 'lnum' on;
   overflow: hidden;
-  &.no-scroll{
-    overflow: hidden;
-  }
 }
 *{
   box-sizing: border-box;
